# Multi-Agent-Trading-Hephasteus

./: .gitignore  README.md  pyproject.toml
log/1778061202/: summary_log.bz2
notebooks/: 00_abides_hello.ipynb
scripts/: eval.py  run_baseline.py  train.py  train_toy.py
src/marl_lob/: actions.py  agent_adapter.py  baseline_market_maker.py  baseline_traj.py  env.py  marl_agents.py  metrics.py  observation_extractor.py  trajectory.py
src/marl_lob/configs/: rmsc03_simple.py
tests/: test_actions.py  test_agent_adapter.py  test_baseline_traj.py  test_env.py  test_marl_agents.py  test_marl_coordinator.py  test_metrics.py  test_smoke.py  test_trajectory.py
tests/fixtures/: synthetic_trajectories.py
