[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marl_lob"
version = "0.0.1"
description = "Multi-agent reinforcement learning in limit order books."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pettingzoo",
    "mpe2",
    "stable-baselines3",
    "supersuit",
    "tensorboard",
]

[tool.setuptools.packages.find]
where = ["src"]
